--- a/Lectures/Derivation_of_NLS.ipynb
+++ b/Lectures/Derivation_of_NLS.ipynb
@@ -165,7 +165,11 @@
     "In a similar vein, we approximate the surface $\\eta(x,t)$ via the expansion\n",
     "$$\n",
     "\\eta(x,t) \\approx \\eta_{1}(\\xi,\\tau)e^{i\\theta} + \\eta_{1}^{\\ast}(\\xi,\\tau)e^{-i\\theta} + \\epsilon\\left(\\eta_{2}(\\xi,\\tau)e^{2i\\theta}+\\eta_{2}^{\\ast}(\\xi,\\tau)e^{-2i\\theta} +\\eta_{0}(\\xi,\\tau) \\right).\n",
-    "$$\n"
+    "$$\n",
+    "With this in place, the only thing left that we need to understand is how the Hilbert transform acts on the slow-modulation approximations we use.  To figure this out, we note that \n",
+    "$$\n",
+    "\n",
+    "$$"
    ]
   },
   {
